Update first r markdown.Rmd
Making changes in Gihub to see whether I am able to pull the same in R Stidio

--- a/first r markdown.Rmd
+++ b/first r markdown.Rmd
@@ -36,3 +36,11 @@ x
 ```
 
 This is the  *replication * **sequence**
+
+## Creating a change in Github to see
+```{r}
+x= print("Hello World")
+x
+```
+
+That's all the changes made in github.
